elastic/http-route-kibana.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana-httproute
  namespace: elastic-stack

spec:
  parentRefs:
    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: kibana-http

    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: kibana-https

  hostnames:
  - kibana.geradorqrcode-srjm.uk

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: logs-kb-http
      port: 5601
